[package]
name = "qryptex"
version = "0.1.0"
authors = ["v1p3rh0rr0r <v1p3rh0rr0r@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
rand = "0.8.3"
rsa = "0.4.0"
sha2 = "0.9.4"
aes-gcm = "*"
openssl = {version = "0.10.38", features = ["vendored"]}
